Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-135827

foreach array is not evaluated

    XMLWordPrintable

Details

    • 64b4f30e3 (dev)

    Description

      Scxml's foreach element has array attribute which is supposed to be evaluated:

      https://www.w3.org/TR/scxml/#foreach

      But qtscxml only tries to read a property of that name from datamodel.

      So basically this wouldn't work:

      <datamodel>
      <data id="SomeObject" expr="{ Variables : [ { one : 1}, { two : 2}, { three : 3} ] } " />
      </datamodel>
      ...
                  <foreach array="SomeObject.Variables"  item="variable" index="varindex">
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            diseraluca Luca Di Sera
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes