Fix foreach array evaluation

The "array" attribute of the <foreach> element is not merely a property
in the data model, but rather a value expression.

Fixes: QTBUG-135827
Change-Id: Ie484f37a3b9d49345c950c9f7bc2a26852438ba9
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>